fixed text wraping

--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@ body {
 
     margin-left: auto;
     margin-right: auto;
-    width: 42em
+    width: 40%;
 }
 
 a:link {
